# zero2prod

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  configration.yaml
api/: Cargo.toml
api/src/: lib.rs  sub_api.rs  subscription.rs
app/: Cargo.toml
app/src/: config.rs  main.rs
common/: Cargo.toml
common/src/: error.rs  lib.rs  macros.rs  meta.rs  response.rs
common/src/dto/: mod.rs  sub_dto.rs  subscription.rs  subsription.rs
common/src/model/: mod.rs
common/src/model/dto/: subscription.rs
common/src/model/entity/: mod.rs  prelude.rs  subscription.rs
common/src/model/subscription/: response.rs
common/src/model/subscription_dto/: request.rs  response.rs
config/: Cargo.toml
core/: Cargo.toml
database/: Cargo.toml
database/src/: lib.rs
database/src/crud/: mod.rs  sub_crud.rs  subscription.rs
database/src/model/: mod.rs  subscription.rs
database/src/models/: subscription.rs
demo/: Cargo.toml
demo/src/: main.rs
middleware/: Cargo.toml
migration/: 20250112135521_create_subscription_table.down.sql  20250112135521_create_subscription_table.up.sql  Cargo.toml
migration/src/: lib.rs  m20250116_033258_create_subscription_table.rs
migrations/: 20250112135521_create_subscription_table.up.sql
service/: Cargo.toml
service/src/: general.rs  lib.rs  sub_handler.rs  subscription.rs
service/src/handler/: general.rs  mod.rs  sub_handler.rs
setting/: Cargo.toml
setting/src/: lib.rs
utils/: Cargo.toml
utils/src/: error.rs  lib.rs  snowflake.rs  validator.rs
