[workspace]
resolver = "2"
members = ["api", "bin", "common", "config", "core", "middleware"]


[workspace.package]
authors = ["xiangong tang <tangxiangong@gmail.com>"]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = { version = "0.8", features = ["form", "macros"] }
tower = "0.5.2"
tower-http = { version = "0.6", features = ["trace"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"