[workspace]
resolver = "2"
members = [
    "api",
    "app",
    "common",
    "service",
    "database",
    "utils",
    "setting",
    "migration",
]


[workspace.package]
authors = ["xiangong tang <tangxiangong@gmail.com>"]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
axum = { version = "0.8.1", features = ["form", "macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors", "timeout"] }
dotenvy = "0.15.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.39", features = ["serde"] }
config = { version = "0.15.5", features = ["yaml"] }
thiserror = "2"
regex = "1.11"
sea-orm = { version = "1", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "debug-print",
] }
