[package]
name = "app"
edition.workspace = true
version.workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
dotenvy = { workspace = true }
common = { path = "../common" }
sqlx = { workspace = true }
api = { path = "../api" }
