[package]
name = "app"
edition.workspace = true
version.workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
api = { path = "../api" }
setting = { path = "../setting" }
dotenvy = { workspace = true }
