[package]
name = "common"
edition.workspace = true
version.workspace = true

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utils = { path = "../utils" }
sea-orm = { workspace = true }
migration = { path = "../migration" }
