[package]
name = "demo"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
dotenvy = { workspace = true }
common = { path = "../common" }
serde = { version = "1.0.217", features = ["derive"] }